# ukol1

./: CMakeLists.txt  README.md  main.cpp
Networking/: CMakeLists.txt
Networking/include/: adress.h  ip_adress.h  mac_adress.h
Networking/src/: adress.cpp  ip_adress.cpp  mac_adress.cpp
